--- a/app/src/main/res/layout/recycle_row.xml
+++ b/app/src/main/res/layout/recycle_row.xml
@@ -15,6 +15,7 @@
         android:fontFamily="@font/chewy"
         android:text="QuestionText"
         android:textAlignment="textStart"
+        android:textColor="@color/purple_700"
         android:textSize="@dimen/questions" />
 
     <RadioGroup
@@ -32,7 +33,8 @@
             android:layout_marginLeft="20dp"
             android:fontFamily="@font/acme"
             android:text="Disagree"
-            android:textAlignment="textEnd" />
+            android:textAlignment="textEnd"
+            android:textColor="@color/purple_500" />
 
         <RadioButton
             android:id="@+id/b1"
@@ -41,7 +43,8 @@
             android:layout_marginLeft="20dp"
             android:checked="true"
             android:fontFamily="@font/acme"
-            android:text="Neutral" />
+            android:text="Neutral"
+            android:textColor="@color/purple_500" />
 
         <RadioButton
             android:id="@+id/c1"
@@ -50,7 +53,8 @@
             android:layout_marginLeft="20dp"
             android:checked="false"
             android:fontFamily="@font/acme"
-            android:text="Agree" />
+            android:text="Agree"
+            android:textColor="@color/purple_500" />
 
     </RadioGroup>
 
