@cfiliault having an issue with drawer navigation after implementing settings. my navController defined in MainActivity wont work properly once I added the code on line 61.

--- a/app/src/main/res/layout/fragment_calculate_answers.xml
+++ b/app/src/main/res/layout/fragment_calculate_answers.xml
@@ -118,7 +118,7 @@
             android:adjustViewBounds="true"
             android:cropToPadding="false"
             android:padding="20dp"
-            tools:src="@tools:sample/avatars" />
+            tools:src="@drawable/penguinDexLogo" />
 
     </LinearLayout>
 
