--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -42,4 +42,8 @@
         android:name="com.example.penguindexapp.Fragments.IntroFragment"
         android:label="Home"
         tools:layout="@layout/fragment_intro" />
+    <fragment
+        android:id="@+id/nav_settings"
+        android:name="com.example.penguindexapp.SettingsFragment"
+        android:label="Settings" />
 </navigation>
