--- a/app/src/main/res/layout/fragment_contact.xml
+++ b/app/src/main/res/layout/fragment_contact.xml
@@ -161,7 +161,7 @@
         android:id="@+id/imageView4"
         android:layout_width="match_parent"
         android:layout_height="@dimen/images"
-        tools:src="@tools:sample/avatars" />
+        tools:src="@drawable/penguinDexLogo" />
 
 
 </LinearLayout>
